<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".act.MainActivity" >

    <TextView
        android:id="@+id/plInputIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/hello_world"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/printerIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-92dp"
        android:hint="@string/inputIp"
        android:inputType="text"
        android:text="@string/inPrinterIp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:text="@string/ipSubmit" />

    <TextView
        android:id="@+id/textXPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/printf"
        android:text="XPrinter(C)-2013" 
        android:background="#AAAAAA"/>

    <EditText
        android:id="@+id/printfLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textXPrinter"
        android:layout_alignLeft="@+id/printfData"
        android:layout_alignTop="@+id/textXPrinter"
        android:layout_toLeftOf="@+id/textXPrinter"
        android:background="#AAAAAA"
        android:focusable="false"
        android:hint="@string/log"
        android:singleLine="true"
        android:textSize="14sp" />

</RelativeLayout>
