<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".act.MainActivity" >

    <Button
        android:enabled="false"
        android:id="@+id/printf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/conTest"
        android:layout_below="@id/conTest"
        android:layout_alignRight="@id/conTest"
        android:text="@string/printf"/>

    <Button
        android:id="@+id/conTest"
        android:layout_width="165dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:text="@string/conTest" />

    <TextView
        android:id="@+id/textXPrinter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/printf"
        android:text="XPrinter(C)-2013" 
        android:background="#AAAAAA"/>

    <EditText
        android:id="@+id/printfLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textXPrinter"
        android:layout_alignTop="@+id/textXPrinter"
        android:layout_toLeftOf="@+id/textXPrinter"
        android:background="#AAAAAA"
        android:focusable="false"
        android:hint="@string/log"
        android:singleLine="true"
        android:textSize="14sp" />

    <Button
        android:enabled="false"
        android:id="@+id/buttonCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/printf"
        android:layout_alignRight="@+id/printf"
        android:layout_below="@+id/printf"
        android:text="開錢箱" />

    <Button
        android:enabled="false"
        android:id="@+id/buttonCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCash"
        android:layout_alignRight="@+id/buttonCash"
        android:layout_below="@+id/buttonCash"
        android:text="切纸" />

</RelativeLayout>
